fixed button letter spacing

--- a/src/app/key-select/key-select.component.css
+++ b/src/app/key-select/key-select.component.css
@@ -8,11 +8,13 @@
   min-width: 36px;
   min-height: 36px;
   transition: all 300ms cubic-bezier(0.25, 0.8, 0.25, 1);
+  display: flex;
+  flex-direction: row;
+  align-content: center;
 }
 
-::ng-deep .mat-button-wrapper {
-  display: flex;
-  justify-content: center;
+::ng-deep mdc-button__label {
+  text-align: center !important;
 }
 
 .selected {
